WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
80621
[BlackBerry] Fix warning in PlatformTouchEventBlackBerry.cpp
https://bugs.webkit.org/show_bug.cgi?id=80621
Summary
[BlackBerry] Fix warning in PlatformTouchEventBlackBerry.cpp
Nima Ghanavatian
Reported
2012-03-08 11:45:47 PST
A warning is being triggered because control can reach the end of a non-void function. This should never happen since all the enum's are being accounted for. I am adding an ASSERT_NOT_REACHED() and returning a valid value.
Attachments
Patch
(1.71 KB, patch)
2012-03-08 12:09 PST
,
Nima Ghanavatian
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Nima Ghanavatian
Comment 1
2012-03-08 12:09:51 PST
Created
attachment 130871
[details]
Patch
Rob Buis
Comment 2
2012-03-08 12:12:14 PST
Comment on
attachment 130871
[details]
Patch LGTM.
WebKit Review Bot
Comment 3
2012-03-08 19:05:45 PST
Comment on
attachment 130871
[details]
Patch Clearing flags on attachment: 130871 Committed
r110249
: <
http://trac.webkit.org/changeset/110249
>
WebKit Review Bot
Comment 4
2012-03-08 19:05:49 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug