[BlackBerry] Fix warning in PlatformTouchEventBlackBerry.cpp https://bugs.webkit.org/show_bug.cgi?id=80621

Fixes a warning seen when control reaches the end of a
non-void function.  Return TouchCancel in the 'default' case.

Patch by Nima Ghanavatian <nghanavatian@rim.com> on 2012-03-08
Reviewed by Rob Buis.

* platform/blackberry/PlatformTouchEventBlackBerry.cpp:
(WebCore::touchEventType):

Canonical link: https://commits.webkit.org/97845@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110249 268f45cc-cd09-0410-ab3c-d52691b4dbfc